--- a/00-referents.Rmd
+++ b/00-referents.Rmd
@@ -26,6 +26,10 @@ We have a list of 19 possible referents, and we count how many of these 20 refer
 18. driver2 (white car)
 19. drivers (driver1 + driver2) - *conjoined referent*
 
+If there are [repitions](#identifying-repitions) in the narrative,
+which change the referent the speaker produces, 
+only referents in the final repetition should be tagged.
+
 See also:
 
 * [Referent Questions](#referents-1)
