Spelling fixes & additional links

--- a/00-referents.Rmd
+++ b/00-referents.Rmd
@@ -33,3 +33,4 @@ only referents in the final repetition should be tagged.
 See also:
 
 * [Referent Questions](#referents-1)
+* [Phrase Questions](#phrases)
