--- a/referent_introduction_annotation_guidelines.tex
+++ b/referent_introduction_annotation_guidelines.tex
@@ -166,6 +166,8 @@ See also:
 \tightlist
 \item
   \protect\hyperlink{referents-1}{Referent Questions}
+\item
+  \protect\hyperlink{phrases}{Phrase Questions}
 \end{itemize}
 
 \hypertarget{answer-2-r-type}{%
@@ -293,6 +295,8 @@ Questions:
 \tightlist
 \item
   \protect\hyperlink{new-vs.-unused-unknown}{New vs.~Unused-Unknown}
+\item
+  \protect\hyperlink{referent-explanations}{Referent Explanations}
 \end{itemize}
 
 \hypertarget{bridging}{%
@@ -492,17 +496,6 @@ One of them \texttt{g} had a ball.
 \end{quote}
 
 \begin{quote}
-There was a man \texttt{man} who was dribbling a ball and a woman \texttt{woman1} with a stroller.
-The two people \texttt{couple} \texttt{g} were crossing the street.
-\end{quote}
-
-\begin{quote}
-There were two people \texttt{couple} crossing the street.
-The first person \texttt{man} \texttt{g} was bouncing a ball,
-and the second \texttt{woman1} \texttt{g} was pushing a stroller.
-\end{quote}
-
-\begin{quote}
 There were two cars \texttt{cars} approaching the scene.
 The first car \texttt{car1} \texttt{g} stopped, and the second car \texttt{car2} \texttt{g} bumped into it.
 \end{quote}
@@ -511,6 +504,17 @@ The first car \texttt{car1} \texttt{g} stopped, and the second car \texttt{car2}
 The drivers \texttt{drivers} of the two cars stopped suddenly.
 The first one \texttt{driver1} \texttt{g} got out and called the police,
 and the second one \texttt{driver2} \texttt{g} started yelling.
+\end{quote}
+
+\begin{quote}
+There was a man \texttt{man} who was dribbling a ball and a woman \texttt{woman1} with a stroller.
+The two people \texttt{couple} \texttt{g} were crossing the street.
+\end{quote}
+
+\begin{quote}
+There were two people \texttt{couple} crossing the street.
+The first person \texttt{man} \texttt{g} was bouncing a ball,
+and the second \texttt{woman1} \texttt{g} was pushing a stroller.
 \end{quote}
 
 Questions:
@@ -537,6 +541,16 @@ A man and a woman were walking.
 There were two cars coming \ldots{}
 {[} 5 CU's {]} \ldots{}
 The man \texttt{gd} helped the lady with her groceries.
+\end{quote}
+
+\begin{quote}
+A man \texttt{man} and a woman were walking together.
+The woman was pushing a stroller.
+Across the street, there was a different woman.
+She was putting groceries into her car.
+But she was also holding a dog on a leash.
+The dog tried to pull away from her, to chase a ball.
+The man \texttt{man} \texttt{gd} looked on in horror as the dog ran into the street.
 \end{quote}
 
 Questions:
@@ -843,7 +857,7 @@ An explanation contains a given referent if:
 The man who was holding the ball \texttt{g} and talking to a woman dropped it.
 \end{quote}
 
-Explanaition: ``who was holding the ball''
+Explanation: ``who was holding the ball''
 
 ``the ball'': \texttt{g}
 
